--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
 	"description": "A nice Route-Model-View framework, made by a nice person.",
 	"license": "MIT",
 	"require": {
-		"greatbigthink/library": "1.*",
+		"greatbigthink/library": "*",
 		"phpmailer/phpmailer": "^5.2"
 	},
 	"config": {
 		"vendor-dir": "vendor"
 	},
-	"minimum-stability":"dev"
+	"minimum-stability":"dev",
+	"prefer-stable": true
 }
