Updated composer.json to include lib-db

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"license": "MIT",
 	"require": {
 		"greatbigthink/lib-core": "*",
+		"greatbigthink/lib-db": "*",
 		"greatbigthink/lib-test": "*",
 		"phpmailer/phpmailer": "^5.2"
 	},
